lots of changes

--- a/FredBot/appsettings.json
+++ b/FredBot/appsettings.json
@@ -1,5 +1,8 @@
 {
-  "Prefix": "!",
+  "Discord": {
+    "Prefix":  "!",
+    /*"Token": ""*/
+  },
   "Logging": {
     "Console": {
       "LogLevel": {
