Added Feature gates features

--- a/FredBot/appsettings.json
+++ b/FredBot/appsettings.json
@@ -1,8 +1,25 @@
 {
   "Discord": {
-    "Prefix":  "!",
+    "Prefix": "!",
     /*"Token": ""*/
   },
+  "Features": {
+    "TestCommand": {
+      "EnabledFor": [
+        {
+          "name": "UserFilter",
+          "parameters": { "DiscordIds": [ 107120010052255744, 564026703119384598 ] }
+        }
+      ],
+      "Responses": {
+        "Enabled": "Youre allowed",
+        "Disabled": "youre not allowed",
+        "ResponseMode": [ "Logger", "DiscordResponse" ]
+      }
+    }
+  },
+  
+  
   "Logging": {
     "Console": {
       "LogLevel": {
