Cleaned up stuff

--- a/FredBot/appsettings.json
+++ b/FredBot/appsettings.json
@@ -4,7 +4,8 @@
     /*"Token": ""*/
   },
   "Features": {
-    "TestCommand": {
+    "TestCommand": false,
+    "t2":  false,/*{
       "EnabledFor": [
         {
           "name": "UserFilter",
@@ -16,7 +17,7 @@
         "Disabled": "youre not allowed",
         "ResponseMode": [ "Logger", "DiscordResponse" ]
       }
-    }
+    }*/
   },
   
   
