--- a/FredBot/appsettings.json
+++ b/FredBot/appsettings.json
@@ -1,11 +1,16 @@
 {
   "Discord": {
     "Prefix": "!",
-    /*"Token": ""*/
+    "Scraping" : {
+      "Enabled": false
+    }
   },
+
+
+
   "Features": {
     "TestCommand": false,
-    "t2":  false,/*{
+    "t2":  false/*{
       "EnabledFor": [
         {
           "name": "UserFilter",
@@ -19,12 +24,11 @@
       }
     }*/
   },
-  
-  
+
+
   "Logging": {
     "Console": {
       "LogLevel": {
-
       }
     }
   }
